syntax = "proto3";

option go_package = "./;proto";
option java_package = "com.github.go2o.rpc";

// 商家
message SMerchant {
  /** 编号 */
  int64 id = 1;
  /** 会员编号 */
  int64 MemberId = 2;
  /** 登录用户 */
  string LoginUser = 3;
  /** 登录密码 */
  string LoginPwd = 4;
  // 盐
  string salt = 5;
  /** 名称 */
  string Name = 6;
  /** 公司名称 */
  string CompanyName = 7;
  /** 是否自营 */
  int32 SelfSales = 8;
  /** 商户等级 */
  int32 Level = 9;
  /** 标志 */
  string Logo = 10;
  /** 省 */
  int32 Province = 11;
  /** 市 */
  int32 City = 12;
  /** 区 */
  int32 District = 13;
  /** 标志 */
  int32 Flag = 14;
  /** 是否启用 */
  int32 Enabled = 15;
  /** 过期时间 */
  int64 ExpiresTime = 16;
  /** 最后登录时间 */
  int64 LastLoginTime = 17;
}

// 商家
message SMerchantPack {
  /** 登录用户 */
  string LoginUser = 1;
  /** 登录密码 */
  string LoginPwd = 2;
  // 盐
  string salt = 3;
  /** 名称 */
  string Name = 4;
  /** 是否自营 */
  sint32 SelfSales = 5;
  /** 店铺名称 */
  string ShopName = 6;
  /** 标志 */
  string ShopLogo = 7;
  /** 电话 */
  string Telephone = 8;
  /** 地址 */
  string Addr = 9;
}

message MerchantCreateRequest {
  SMerchantPack Mch = 1;
  int64 RelMemberId = 2;
  /** 过期时间,0表示永远不过期 */
  int64 ExpiresTime = 3;
}

message MerchantCreateResponse {
  int64 ErrCode = 1;
  string ErrMsg = 2;
  int64 Id = 3;
}

message SaveMerchantRequest {
  /** 编号 */
  int64 id = 1;
  /** 会员编号 */
  int64 MemberId = 2;
  /** 名称 */
  string Name = 3;
  /** 是否自营 */
  int32 SelfSales = 4;
  /** 商户等级 */
  int32 Level = 5;
  /** 标志 */
  string Logo = 6;
  /** 过期时间 */
  int64 ExpiresTime = 7;
}


/** 更换会员绑定请求 */
message ChangeMemberBindRequest{
  /** 商户编号 */
  int64 MerchantId = 1;
  /** 会员用户名 */
  string UserName = 2;
}

message MchUserPwdRequest {
  string User = 1;
  string Pwd = 2;
}
// 用户登录响应
message MchLoginResponse{
  // 错误码
  int32 ErrCode = 1;
  // 错误消息
  string ErrMsg = 2;
  // 会员编号
  int64 MerchantId = 3;
  // 店铺编号
  int64 ShopId = 4;
}

message SyncWSItemsResponse {
  map<string, sint32> Value = 1;
}

message STradeConfListResponse {
  repeated STradeConf_ Value = 1;
}

message TradeConfRequest {
  sint32 MchId = 1;
  sint32 TradeType = 2;
}
message TradeConfSaveRequest {
  sint32 MchId = 1;
  repeated STradeConf_ Arr = 2;
}

// 商户交易设置
message STradeConf_ {
  // 商户编号  sint64 MchId = 1;
  // 交易类型  sint32 TradeType = 2;
  // 交易方案，根据方案来自动调整比例  sint64 PlanId = 3;
  // 交易标志  sint32 Flag = 4;
  // 交易手续费依据,1:按金额 2:按比例  sint32 AmountBasis = 5;
  // 交易费，按单笔收取  sint32 tradeFee = 6;
  // 交易手续费比例  sint32 TradeRate = 7;
}

// 商户申请信息
message SMchSignUp {
  int64 id = 1;
  // 申请单号
  string SignNo = 2;
  // 会员编号
  int64 MemberId = 3;
  // 用户名
  string User = 4;
  // 密码
  string Pwd = 5;
  // 盐
  string salt = 6;
  // 商户名称号
  string MchName = 7;
  // 省
  int32 Province = 8;
  // 市
  int32 City = 9;
  // 区
  int32 District = 10;
  // 详细地址
  string Address = 11;
  // 店铺店铺
  string ShopName = 12;
  // 公司名称
  string CompanyName = 13;
  // 营业执照编号
  string CompanyNo = 14;
  // 法人
  string PersonName = 15;
  // 法人身份证
  string PersonId = 16;
  // 法人身份证
  string PersonImage = 17;
  // 联系电话
  string Phone = 18;
  // 营业执照图片
  string CompanyImage = 19;
  // 委托书
  string AuthDoc = 20;
  // 备注
  string Remark = 21;
  // 是否通过
  int32 ReviewState = 22;
  // 提交时间
  int64 SubmitTime = 23;
}

message MchReviewRequest {
  int64 MerchantId = 1;
  bool Pass = 2;
  string Remark = 3;
}

// 企业信息
message SEnterpriseInfo {
  // 编号
  int64 id = 1;
  // 商户编号
  int64 MerchantId = 2;
  // 公司名称
  string CompanyName = 3;
  // 公司营业执照编号
  string CompanyNo = 4;
  // 法人
  string PersonName = 5;
  // 法人身份证编号
  string PersonIdNo = 6;
  // 身份证验证图片(人捧身份证照相)
  string PersonImage = 7;
  // 公司电话
  string Telephone = 8;
  // 省
  int32 Province = 9;
  // 市
  int32 City = 10;
  // 区
  int32 District = 11;
  // 省+市+区字符串表示
  string Location = 12;
  // 公司地址
  string Address = 13;
  // 营业执照图片
  string CompanyImage = 14;
  // 授权书
  string AuthDoc = 15;
  //是否已审核
  int32 ReviewState = 16;
  // 审核时间
  int64 ReviewTime = 17;
  // 审核备注
  string ReviewRemark = 18;
  //更新时间
  int64 UpdateTime = 19;
}

message SaveEnterpriseRequest {
  // 商户编号
  int64 MerchantId = 1;
  SEnterpriseInfo Value = 2;
}

// 商户账户
message SMerchantAccount {
  // 余额
  int64 Balance = 1;
  // 冻结金额
  int64 FreezeAmount = 2;
  // 待入账金额
  int64 AwaitAmount = 3;
  // 平台赠送金额
  int64 PresentAmount = 4;
  // 累计销售总额
  int64 SalesAmount = 5;
  // 累计退款金额
  int64 RefundAmount = 6;
  // 已提取金额
  int64 WithdrawAmount = 7;
  // 线下销售金额
  int64 OfflineSales = 8;
  // 更新时间
  int64 UpdateTime = 9;
}

message MerchantDisableRequest {
  // 商户编号
  int64 MerchantId = 1;
  // 是否启用
  bool Enabled = 2;
}

// 销售设置
message SMerchantSaleConf {
  // 合作商编号
  int64 MerchantId = 1;
  // 是否启用分销模式
  bool FxSalesEnabled = 2;
  // 返现比例,0则不返现
  double CashBackPercent = 3;
  // 一级比例
  double CashBackTg1Percent = 4;
  // 二级比例
  double CashBackTg2Percent = 5;
  // 会员比例
  double CashBackMemberPercent = 6;
  // 自动设置订单
  bool AutoSetupOrder = 7;
  // 订单超时分钟数
  int32 OrderTimeOutMinute = 8;
  // 订单自动确认时间
  int32 OrderConfirmAfterMinute = 9;
  // 订单超时自动收货
  int32 OrderTimeOutReceiveHour = 10;
}

message SaveMerchantSaleConfRequest {
  int64 MerchantId = 1;
  SMerchantSaleConf Value = 2;
}

message ModifyMerchantPasswordRequest {
  int64 MerchantId = 1;
  string Origin = 2;
  // Md5编码后的密码
  string Password = 3;
}

// 商户接口信息
message SMerchantApiInfo {
  // 商户接口编号
  string ApiId = 1;
  // 密钥
  string ApiSecret = 2;
  // IP白名单
  repeated string WhiteList = 3;
  // 是否启用
  bool Enabled = 4;
}

message MerchantApiPermRequest {
  int64 MerchantId = 1;
  // 是否启用
  bool Enabled = 4;
}

message WithdrawToMemberAccountRequest {
  int64 MerchantId = 1;
  int64 Amount = 2;
}

message MerchantChargeRequest {
  int64 MerchantId = 1;
  int32 Kind = 2;
  int64 Amount = 3;
  string Title = 4;
  string OuterNo = 5;
  int64 RelateUserId = 6;
}

message MerchantBuyerGroupId {
  int64 MerchantId = 1;
  int64 GroupId = 2;
}

message SaveMerchantBuyerGroupRequest {
  int64 MerchantId = 1;
  SMerchantBuyerGroup Value = 2;
}

message MerchantBuyerGroupListResponse {
  repeated SMerchantBuyerGroup Value = 1;
}

// 商户客户分组
message SMerchantBuyerGroup {
  //编号
  int64 id = 1;
  //客户分组编号
  int64 GroupId = 2;
  //分组别名
  string Name = 3;
  // 是否启用零售
  bool EnableRetail = 4;
  // 是否启用批发
  bool EnableWholesale = 5;
  // 批发返点周期(天)
  int32 RebatePeriod = 6;
}

message SaveWholesaleRebateRateRequest {
  int64 MerchantId = 1;
  int64 GroupId = 2;
  repeated SWholesaleRebateRate Value = 3;
}

message WholesaleRebateRateListResponse {
  repeated SWholesaleRebateRate Value = 1;
}

// 批发客户分组返点比例设置
message SWholesaleRebateRate {
  // 编号
  int64 id = 1;
  // 批发商编号
  int64 WsId = 2;
  // 客户分组编号
  int64 BuyerGroupId = 3;
  // 下限金额
  int32 RequireAmount = 4;
  // 返点率
  double RebateRate = 5;
}
